--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
   <body>
     <main class="container">
       <header class="hero">
+        <nav aria-label="主导航" class="site-nav">
+          <a href="index.html" aria-current="page">Home</a>
+          <a href="about.html">About</a>
+        </nav>
         <h1>AlexFred</h1>
         <p class="tagline">Build simple products with clear thinking.</p>
       </header>
