--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
       <section id="contact" aria-labelledby="contact-title">
         <h2 id="contact-title">Contact</h2>
         <p>
-          <a href="mailto:alexfred@example.com" id="email-link">alexfred@example.com</a>
+          <a href="mailto:橡树湾小区alexfred@outlook.com" id="email-link">alexfred@example.com</a>
         </p>
         <button id="copy-email" class="text-button" type="button">Copy email</button>
       </section>
